# python-package-template

./: .markdownlint.yaml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml  test.yaml
src/package_name_goes_here/: __init__.py
tests/: test_square.py
