[project]
name = "package-name-goes-here"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shunichiro Nomura", email = "nomura@space.t.u-tokyo.ac.jp" },
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
package-name-goes-here = "package_name_goes_here:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
